# embedded-system-control-stack

./: .gitignore  CMakeLists.txt  README.md  configuration_example.json  sdkconfig.defaults
config/: config.h.example
main/: CMakeLists.txt  TM7711.c  TM7711.h  adc_sensor.c  adc_sensor.h  ble.c  ble.h  conf_task_manager.c  conf_task_manager.h  device_config.c  device_config.h  ladder_elements.c  ladder_elements.h  main.c  mqtt.c  mqtt.h  ntp.c  ntp.h  nvs_utils.c  nvs_utils.h  one_wire_detect.c  one_wire_detect.h  sensor.c  sensor.h  variables.c  variables.h  wifi.c  wifi.h
